// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <a
    className="h3 m-tnm-sidebar__route-name u-bg--red-line"
    href="/schedules/Red"
  >
    <span
      className=""
    >
      Red Line
    </span>
  </a>
  <div
    className="m-tnm-sidebar__direction"
  >
    <div
      className="m-tnm-sidebar__direction-name u-small-caps"
    >
      South
    </div>
    <div
      className="m-tnm-sidebar__direction-headsigns"
    >
      <div
        className="m-tnm-sidebar__headsign-schedule"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            Ashmont
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                3
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                13
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            Braintree
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                9
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                21
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__direction"
  >
    <div
      className="m-tnm-sidebar__direction-name u-small-caps"
    >
      North
    </div>
    <div
      className="m-tnm-sidebar__direction-headsigns"
    >
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            Alewife
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                7
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                13
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders blue line routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <a
    className="h3 m-tnm-sidebar__route-name u-bg--blue-line"
    href="/schedules/Blue"
  >
    <span
      className=""
    >
      Blue Line
    </span>
  </a>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Blue"
      >
        View 
        Blue Line
         schedule
      </a>
    </div>
  </div>
</div>
`;

exports[`renders bus routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <a
    className="h3 m-tnm-sidebar__route-name u-bg--bus"
    href="/schedules/Bus"
  >
    <span
      className="bus-route-sign"
    >
      Bus
    </span>
  </a>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Bus"
      >
        View 
        Bus
         schedule
      </a>
    </div>
  </div>
</div>
`;

exports[`renders ferry routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <a
    className="h3 m-tnm-sidebar__route-name u-bg--ferry"
    href="/schedules/Boat-F4"
  >
    <span
      className=""
    >
      Charlestown Ferry
    </span>
  </a>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Boat-F4"
      >
        View 
        Charlestown Ferry
         schedule
      </a>
    </div>
  </div>
</div>
`;

exports[`renders green line routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <a
    className="h3 m-tnm-sidebar__route-name u-bg--green-line"
    href="/schedules/Green-B"
  >
    <span
      className=""
    >
      B Line
    </span>
  </a>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Green-B"
      >
        View 
        B Line
         schedule
      </a>
    </div>
  </div>
</div>
`;

exports[`renders orange line routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <a
    className="h3 m-tnm-sidebar__route-name u-bg--orange-line"
    href="/schedules/Orange"
  >
    <span
      className=""
    >
      Orange Line
    </span>
  </a>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Orange"
      >
        View 
        Orange Line
         schedule
      </a>
    </div>
  </div>
</div>
`;

exports[`renders red line routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <a
    className="h3 m-tnm-sidebar__route-name u-bg--red-line"
    href="/schedules/Red"
  >
    <span
      className=""
    >
      Red Line
    </span>
  </a>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Red"
      >
        View 
        Red Line
         schedule
      </a>
    </div>
  </div>
</div>
`;
